Issue with button placement
Fixed an issue where the button would overlap with the border with another job post.

--- a/src/client/src/css/jobListing.css
+++ b/src/client/src/css/jobListing.css
@@ -39,7 +39,7 @@
     margin: 5px;
     display: block;
     width: 80%;
-    height: 240px;
+    height: auto;
 }
 
 .jobPosts .jobPost button{
